--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">ReTouchPis</string>
     <string name="translabel"> </string>
     <string name="puton">+   导入</string>
+    <string name="btn_lighted">亮度</string>
+    <string name="btn_cpy">对比度</string>
+    <string name="btn_gray">灰度</string>
+    <string name="btn_noise">颗粒</string>
+    <string name="btn_ruihua">锐化</string>
+    <string name="takePhone">拍  摄</string>
 </resources>
