增添了色温、修改app图标

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ReTouchPis</string>
+    <string name="app_name">丑图秀秀</string>
     <string name="translabel"> </string>
     <string name="puton">+   导入</string>
     <string name="btn_lighted">亮度</string>
